fix positioning of connect button on iphone

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -258,6 +258,8 @@ body {
   }
   a#connect {
     padding-top: 7px;
+    padding-right: 35px;
+    padding-bottom: 11px;
     text-align: center;
 
   }
